<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.babbangona.accesscontrol.Main2Activity">


    <ImageView
        android:layout_width="68dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/image_button"
        android:background="@drawable/component_babbangona_logo"
        />




        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/appname_display"
            android:textSize="20sp"
            android:textColor="@color/text_color_black"/>

<!--    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18sp"
        android:textColor="@color/text_color_black"/>-->
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/username"
        android:fontFamily="@font/roboto"
        android:hint="@string/username_placeholder"
        android:textColorHint="@color/text_color_black"
        android:background="@drawable/view_looks"/>

   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/text_color_black"/>-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password_placeholder"
        android:id="@+id/password"
        android:textColorHint="@color/text_color_black"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:inputType="numberPassword"
        android:background="@drawable/view_looks"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:translationZ="5dp"
            android:layout_marginTop="30dp"
            android:onClick="SignIn"
            app:cardCornerRadius="7dp"
            android:backgroundTint="@color/text_color_black"
            android:layout_height="35dp">
            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:fontFamily="@font/roboto"

                    android:text="@string/login"
                    android:textColor="@color/text_color_white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:weightSum="1.0">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:elevation="5dp"
                android:layout_gravity="center"
                android:translationZ="5dp"
                android:layout_weight="0.5"
                android:onClick="IdSignIn"
                android:layout_marginRight="10dp"

                android:backgroundTint="@color/holo_orange_light"
                app:cardCornerRadius="7dp"

                android:layout_height="35dp">
                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/roboto"
                        android:text="@string/idSignIn"
                        android:textColor="@color/text_color_black"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:elevation="5dp"
                android:layout_gravity="center"
                android:translationZ="5dp"
                android:layout_weight="0.5"
                android:onClick="UpdateList"

                android:backgroundTint="@color/holo_orange_light"
                app:cardCornerRadius="7dp"

                android:layout_height="35dp">
                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/roboto"
                        android:text="@string/refresh"
                        android:textColor="@color/text_color_black"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/footer"
                android:fontFamily="@font/roboto"
                android:textColor="@color/text_color_black"
                android:textSize="14sp" />
        </RelativeLayout>






    </LinearLayout>
</ScrollView>