<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"

    android:orientation="vertical"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="16dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:background="@drawable/component_babbangona_logo"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"

        android:hint="@string/last5Digits"
        android:id="@+id/username"
        android:textColorHint="@color/text_color_black"
        android:paddingLeft="10dp"
        android:layout_marginTop="60dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:inputType="number"
        android:background="@drawable/view_looks"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:hint="@string/password_placeholder"
        android:id="@+id/password"
        android:textColorHint="@color/text_color_black"
        android:paddingLeft="10dp"
        android:textSize="14sp"
        android:layout_marginTop="10dp"

        android:fontFamily="@font/roboto"
        android:inputType="numberPassword"
        android:background="@drawable/view_looks"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:translationZ="5dp"
        android:layout_marginTop="50dp"
        android:id="@+id/crdvSignIn"
        app:cardCornerRadius="7dp"
        android:backgroundTint="@color/text_color_black"
        android:layout_height="30dp">
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/roboto"

                android:text="@string/login"
                android:textColor="@color/text_color_white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>

</LinearLayout>
